--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,22 @@
-* {
-  color: red ;
+/* modo errato del sistemare il container fluid. approfondire lo studio sul sito di bootstrap */
+
+.container-fluid {
+  margin: 0px;
+  padding: 0px;
+}
+body {
+  color: white;
+}
+header, .jumbotron {
+  padding: 0 15% !important;
+}
+header {
+  background-color: #2c3e50;
+}
+[class*="col-"] {
+  height: 100px;
+}
+.jumbotron {
+  background-color: #1abc9c;
+  text-align: center;
 }
