--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 body {
   color: white;
 }
-header, .jumbotron, main, footer {
+header, .jumbotron, section, footer {
   padding: 0 15% !important;
 }
 header {
@@ -29,4 +29,11 @@ section{
 section:nth-child(even) {
   background: #1abc9c;
   color: white;
+}
+footer {
+  background-color: #3a546d;
+  text-align: center;
+}
+footer.col-xs-12 {
+  background-color: #2c3e50;
 }
