--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,8 @@ footer {
   background-color: #3a546d;
   text-align: center;
 }
-footer.col-xs-12 {
+.last-footer {
   background-color: #2c3e50;
+  text-align: center;
+
 }
