--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 /* modo errato del sistemare il container fluid. approfondire lo studio sul sito di bootstrap */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box!important;
+}
 body {
   font-family: "Montserrat",sans-serif ;
 }
