--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,5 @@
 /* modo errato del sistemare il container fluid. approfondire lo studio sul sito di bootstrap */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box!important;
-}
 body {
   font-family: "Montserrat",sans-serif ;
 }
@@ -15,19 +10,16 @@ body {
 [class*="col-"] {
   height: 100px;
 }*/
+/* header, .jumbotron, section, footer {
+padding: 0 15% !important;
+} */
 body {
   color: white;
 }
-/* header, .jumbotron, section, footer {
-  padding: 0 15% !important;
-} */
 nav {
   background-color: #2c3e50;
   line-height: 80px;
   height: 80px;
-}
-#slogan {
-  font-size: 2em;
 }
 .d-none-lg {
   display: none;
@@ -91,17 +83,35 @@ footer {
 h2, header, .col-xs-12>span {
   text-transform: uppercase;
 }
+header a {
+  padding: 1em 0em;
+}
 a, a:hover{
   text-decoration: none;
   color: white;
-  padding: 1em;
 }
 a:first-of-type, h2 {
   font-weight: bolder;
 }
 .card {
   margin: 3% 0%;
+}
+.img-overlay {
+  display: none;
+}
+.hover-plus:hover .img-overlay {
+  background-color: rgba(26,188, 156, 0.5);
+  height: 100%;
+  font-size: 16em;
+  width: 94%;
+  display: block !important;
+  position: absolute;
+  z-index: 100;
   border-radius: 10%;
+}
+.prova {
+  border-radius: 10%;
+  width:100%;
 }
 .m-top {
   margin-top: 10px;
