--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ nav {
 .d-none-lg {
   display: none;
 }
-header .dropdown .btn {
+header .dropdown .btn  {
   background-color: #148f77;
 }
 header .btn>ul {
@@ -86,6 +86,9 @@ h2, header, .col-xs-12>span {
 header a {
   padding: 1em 0em;
 }
+header a:hover {
+  color: #1abc9c;
+}
 a, a:hover{
   text-decoration: none;
   color: white;
@@ -115,4 +118,16 @@ a:first-of-type, h2 {
 }
 .m-top {
   margin-top: 10px;
+}
+.m-down {
+  margin-bottom: 10px;
+}
+section .container .btn  {
+  background-color: rgba(0,0,0,0);
+  border: 1px solid white;
+  color: white;
+}
+section .container .btn:hover {
+  background-color: white;
+  color: black;
 }
